[tool.poetry]
name = "esmerald_utils"
version = "0.1.0"
description = ""
authors = ["Owonikoko Olaoluwa <kokoserver@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
esmerald = "^3.0.0"
awesome-slugify = "^1.6.5"
saffier = {extras = ["postgres"], version = "^1.3.7"}
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
