[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esmerald"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ['version']
license = "MIT"
authors = ["Owonikoko Olaoluwa <kokoserver@hotmail.com>"]

[tool.hatch.version]
path = "0.0.1"

dependencies = [
    "esmerlad",
    "saffier",
    "awesome-slugify>=1.6.5,<2",
    "jinja2>=3.1.2,<4.0.0",
    "openpyxl"
]


