[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "esmerald"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ['version']
license = "MIT"
authors = [{ name = "Owonikoko Olaoluwa", email = "kokoserver@hotmail.com" }]


[tool.hatch.version]
path = "esmerald_utils/__init__.py"

dependencies = [
    "esmerlad",
    "saffier",
    "awesome-slugify>=1.6.5,<2",
    "jinja2>=3.1.2,<4.0.0",
    "openpyxl"
]



[tool.hatch.build.targets.wheel]
packages = ["/esmerald_utils"]
[tool.hatch.build.targets.sdist]
include = ["/esmerald_utils"]
